Fix shaky transform scale on Safari

--- a/src/components/IconLink/IconLink.scss
+++ b/src/components/IconLink/IconLink.scss
@@ -7,6 +7,6 @@
   align-items: center;
 
   &:hover {
-    transform: scale(1.1);
+    transform: translate3d(0, 0, 0) scale(1.1);
   }
 }
